--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
   },
   "permissions": [
     "activeTab",
+    "tabs",
     "tts",
     "storage",
     "ttsEngine",
@@ -33,7 +34,8 @@
       "js/defaults.js",
       "js/speech.js",
       "js/document.js",
-      "js/events.js"
+      "js/events.js",
+      "js/stt.js"
     ],
     "persistent": false
   },
