--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "__MSG_extension_name__",
-  "short_name": "__MSG_extension_short_name__",
-  "description": "__MSG_extension_description__",
+  "name": "TalkToMe",
+  "short_name": "TalkToMe",
+  "description": "A voice-based assistant that reads website content out loud and navigates to other web pages.",
   "version": "1.3.3",
   "default_locale": "en",
 
